--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -163,12 +163,12 @@
 
                         ¡Gracias por ser parte de esta comunidad viajera!</p>
                     <div class="d-flex justify-content-center fs-2 gap-4">
-                        <a class="text-gradient" href="#!"><i class="bi bi-facebook"></i></a>
-                        <a class="text-gradient" href="#!"><i class="bi bi-instagram"></i></a>
-                        <a class="text-gradient" href="#!"><i class="bi bi-tiktok"></i></a>
-                        <a class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a>
-                        <a class="text-gradient" href="#!"><i class="bi bi-linkedin"></i></a>
-                        <a class="text-gradient" href="#!"><i class="bi bi-github"></i></a>
+                        <a class="text-gradient" href="https://www.facebook.com/joetastetravel"><i class="bi bi-facebook"></i></a>
+                        <a class="text-gradient" href="https://www.instagram.com/joetastetravel/"><i class="bi bi-instagram"></i></a>
+                        <a class="text-gradient" href="https://www.tiktok.com/@joseoscarcc"><i class="bi bi-tiktok"></i></a>
+                        <a class="text-gradient" href="https://twitter.com/joseoscarcc"><i class="bi bi-twitter"></i></a>
+                        <a class="text-gradient" href="https://www.linkedin.com/in/joecotacarrasc/"><i class="bi bi-linkedin"></i></a>
+                        <a class="text-gradient" href="https://github.com/joseoscarcc"><i class="bi bi-github"></i></a>
                     </div>
                 </div>
             </div>
