--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -68,9 +68,9 @@
           <div class="row align-items-center justify-content-between flex-column flex-sm-row">
               <div class="col-auto"><div class="small m-0">Copyright &copy; Cota Parada LLC 2023</div></div>
               <div class="col-auto">
-                  <a class="small" href="privacy.html">Privacy</a>
+                  <a class="small" href="{{url_for('main.privacy')}}">Privacy</a>
                   <span class="mx-1">&middot;</span>
-                  <a class="small" href="terms.html">Terms</a>
+                  <a class="small" href="{{url_for('main.terms')}}">Terms</a>
                   <span class="mx-1">&middot;</span>
                   <a class="small" href="{{url_for('contacto.index')}}">Contact</a>
               </div>
