changes on terms and policy

--- a/app/templates/main/terms.html
+++ b/app/templates/main/terms.html
@@ -9,17 +9,14 @@
       <div class="bg-light rounded-4 py-5 px-4 px-md-5">
           <div class="text-center mb-5">
               <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 mb-3"><i class="bi bi-envelope"></i></div>
-              <h1 class="fw-bolder">Get in touch</h1>
-              <p class="lead fw-normal text-muted mb-0">Let's work together!</p>
+              <h1 class="fw-bolder">Website Terms of Use</h1>
+              <p class="lead fw-normal text-muted mb-0">Version 1.0/p>
           </div>
           <div class="row gx-5 justify-content-center">
               <div class="col-lg-8 col-xl-6">
-
-                <p class="c4"><span class="c1">Website Terms of Use</span></p>
-                <p class="c4" id="h.gjdgxs"><span class="c1">Version 1.0</span></p>
                 <p class="c4"><span class="c6">Last revised on: </span><span class="c6 c15">September, 2023</span></p>
                 <p class="c11"><span class="c2"></span></p>
-                <p class="c10"><span class="c9">The website located at www.cotaparada.com (the &ldquo;</span><span class="c6">Site</span><span class="c9">&rdquo;) is a copyrighted work belonging to Cota Parada LLC (&ldquo;</span><span class="c6">Company</span><span class="c9">&rdquo;, &ldquo;</span><span class="c6">us</span><span class="c9">&rdquo;, &ldquo;</span><span class="c6">our</span><span class="c9">&rdquo;, and &ldquo;</span><span class="c6">we</span><span class="c9">&rdquo;). &nbsp;Certain features of the Site may be subject to additional guidelines, terms, or rules, which will be posted on the Site in connection with such features. &nbsp;Without limitation to the preceding sentence, your submission of information, including personal information, through or in connection with the Site is governed by the terms of our privacy policy as updated from time to time, available at </span><span class="c6">[</span><span class="c6 c12">Insert link to Privacy Policy</span><span class="c6">] </span><span class="c9">(&ldquo;</span><span class="c6">Privacy Policy</span><span class="c2">&rdquo;). </span></p>
+                <p class="c10"><span class="c9">The website located at www.cotaparada.com (the &ldquo;</span><span class="c6">Site</span><span class="c9">&rdquo;) is a copyrighted work belonging to Cota Parada LLC (&ldquo;</span><span class="c6">Company</span><span class="c9">&rdquo;, &ldquo;</span><span class="c6">us</span><span class="c9">&rdquo;, &ldquo;</span><span class="c6">our</span><span class="c9">&rdquo;, and &ldquo;</span><span class="c6">we</span><span class="c9">&rdquo;). &nbsp;Certain features of the Site may be subject to additional guidelines, terms, or rules, which will be posted on the Site in connection with such features. &nbsp;Without limitation to the preceding sentence, your submission of information, including personal information, through or in connection with the Site is governed by the terms of our privacy policy as updated from time to time, available at </span><span class="c6">[</span><a href="{{url_for('main.policy')}}"><span class="c6">Privacy Policy</span></a><span class="c6">] </span><span class="c9">(&ldquo;</span><span class="c2">&rdquo;). </span></p>
                 <p class="c10"><span class="c9">All such additional terms, guidelines, and rules, including our Privacy Policy, are incorporated by reference into these terms of use (these &ldquo;</span><span class="c6">Terms</span><span class="c2">&rdquo;).</span></p>
                 <p class="c10"><span class="c9">These Terms set forth the legally binding terms and conditions that govern your use of the Site. &nbsp;By accessing or using the Site, you are accepting these Terms (on behalf of yourself or the entity that you represent)</span><span class="c9">,</span><span class="c9">&nbsp;and you represent and warrant that you have the right, authority, and capacity to enter into these Terms (on behalf of yourself or the entity that you represent). &nbsp; &nbsp;If you do not agree with all of the provisions of these Terms, do not access and/or use the Site.</span></p>
                 <ol class="c3 lst-kix_list_8-0 start" start="1">
@@ -88,9 +85,7 @@
                     <li class="c5"><span class="c1">Copyright/Trademark Information</span><span class="c2">. &nbsp;Copyright &copy; </span><span class="c2">2023 </span><span class="c2">Cota Parada LLC.. All rights reserved. &nbsp;All trademarks, logos and service marks (&ldquo;</span><span class="c1">Marks</span><span class="c2">&rdquo;) displayed on the Site are our property or the property of other third parties. You are not permitted to use these Marks without our prior written consent or the consent of such third party which may own the Marks.</span></li>
                     <li class="c5" id="h.z337ya"><span class="c1">Contact Information. </span><span class="c2">If you wish to contact us in writing, or if these Terms require you to give notice to us in writing, please contact us at</span><span class="c1">:</span></li>
                 </ol>
-                <p class="c8"><span class="c2">Jose Oscar Cota</span></p>
-                <p class="c8"><span class="c2">Address: </span></p>
-                <p class="c8"><span class="c2">1425 W Fairway Dr</span></p>
+                <p class="c8"><span class="c2">Cota Parada LLC</span></p>
                 <p class="c8"><span class="c2">Nogales AZ 85621</span></p>
                 <p class="c8"><span class="c2">Telephone: 8052533757</span></p>
                 <p class="c8"><span class="c9 c14">Email: joseoscar@jojuma.com</span></p>
