--- a/app/templates/contacto/contacto.html
+++ b/app/templates/contacto/contacto.html
@@ -17,7 +17,7 @@
           <div class="row gx-5 justify-content-center">
               <div class="col-lg-8 col-xl-6">
 
-                  <form method="POST" action="/submit">
+                  <form method="POST">
                       <!-- Name input-->
                       <div class="form-floating mb-3">
                           <input class="form-control" id="name" name="name" type="text" placeholder="Enter your name..." data-sb-validations="required" />
@@ -58,7 +58,7 @@
                       <!-- an error submitting the form-->
                       <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
                       <!-- Submit Button-->
-                      <div class="d-grid"><button class="btn btn-primary btn-lg disabled" id="submitButton" type="submit">Submit</button></div>
+                      <div class="d-grid"><button class="btn btn-primary btn-lg disabled" id="submitButton" type="submit" formaction="{{ url_for('contacto.submit') }}">Submit</button></div>
                   </form>
               </div>
           </div>
