--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -38,7 +38,7 @@
                   <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
                       <li class="nav-item"><a class="nav-link" href="{{url_for('main.index')}}">Inicio</a></li>
                       <li class="nav-item"><a class="nav-link" href="{{url_for('libro.index')}}">Libro</a></li>
-                      <li class="nav-item"><a class="nav-link" href="meetus.html">Conocenos</a></li>
+                      <li class="nav-item"><a class="nav-link" href="{{url_for('libro.meetus')}}">Conocenos</a></li>
                       <li class="nav-item"><a class="nav-link" href="{{url_for('contacto.index')}}">Contacto</a></li>
                   </ul>
               </div>
