--- a/app/templates/contacto/contacto.html
+++ b/app/templates/contacto/contacto.html
@@ -17,34 +17,25 @@
           <div class="row gx-5 justify-content-center">
               <div class="col-lg-8 col-xl-6">
 
-                  <form method="POST">
-                      <!-- Name input-->
-                      <div class="form-floating mb-3">
-                          <input class="form-control" id="name" name="name" type="text" placeholder="Enter your name..." />
-                          <label for="name">Full name</label>
-                          <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
-                      </div>
-                      <!-- Email address input-->
-                      <div class="form-floating mb-3">
-                          <input class="form-control" id="email" name="email" type="email" placeholder="name@example.com" />
-                          <label for="email">Email address</label>
-                          <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
-                          <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
-                      </div>
-                      <!-- Phone number input-->
-                      <div class="form-floating mb-3">
-                          <input class="form-control" id="phone" name="phone" type="tel" placeholder="(123) 456-7890" />
-                          <label for="phone">Phone number</label>
-                          <div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is required.</div>
-                      </div>
-                      <!-- Message input-->
-                      <div class="form-floating mb-3">
-                          <textarea class="form-control" id="message" name="message" type="text" placeholder="Enter your message here..." style="height: 10rem"></textarea>
-                          <label for="message">Message</label>
-                          <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
-                      </div>
-                    
-                      <div class="d-grid"><button class="btn btn-primary btn-lg disabled" id="submitButton" type="submit" formaction="{{ url_for('contacto.submit') }}">Submit</button></div>
+                <form method="POST">
+                    <!-- Campo para el nombre -->
+                    <label for="nombre">Name:</label>
+                    <input type="text" id="nombre" name="nombre" required><br><br>
+    
+                    <!-- Campo para el correo electrónico -->
+                    <label for="correo">Correo Electrónico:</label>
+                    <input type="email" id="correo" name="correo" required><br><br>
+    
+                    <!-- Campo para el teléfono -->
+                    <label for="telefono">Phone number:</label>
+                    <input type="tel" id="telefono" name="telefono" pattern="[0-9]{10}" placeholder="Ejemplo: 1234567890" required><br><br>
+    
+                    <!-- Campo para el correo electrónico -->
+                    <label for="message">Message:</label>
+                    <input type="text" id="message" name="message" required><br><br>
+
+                      <!-- Botón para enviar el formulario -->
+                    <input type="submit" value="Send" formaction="{{ url_for('contacto.submit') }}">
                   </form>
               </div>
           </div>
