--- a/app/templates/contacto/contacto.html
+++ b/app/templates/contacto/contacto.html
@@ -19,23 +19,41 @@
 
                 <form method="POST">
                     <!-- Campo para el nombre -->
-                    <label for="nombre">Name:</label>
-                    <input type="text" id="nombre" name="nombre" required><br><br>
+                    <div class="form-floating mb-3">
+                        <label for="nombre">Name:</label><br><br>
+                        <input type="text" id="nombre" name="nombre" required><br><br>
+                    </div>
+
+                    <div class="form-floating mb-3">
+                        <label for="nombre">Name:</label><br><br>
+                        <input type="text" id="nombre" name="nombre" required><br><br>
+                    </div>
     
                     <!-- Campo para el correo electrónico -->
-                    <label for="correo">Correo Electrónico:</label>
-                    <input type="email" id="correo" name="correo" required><br><br>
-    
+                    <div class="form-floating mb-3">
+                        <label for="correo">Correo Electrónico:</label><br><br>
+                        <input type="email" id="correo" name="correo" required><br><br>
+                    </div>
+                    
+                    
                     <!-- Campo para el teléfono -->
-                    <label for="telefono">Phone number:</label>
-                    <input type="tel" id="telefono" name="telefono" pattern="[0-9]{10}" placeholder="Ejemplo: 1234567890" required><br><br>
-    
+                    <div class="form-floating mb-3">
+                        <label for="telefono">Phone number:</label><br><br>
+                        <input type="tel" id="telefono" name="telefono" pattern="[0-9]{10}" placeholder="Ejemplo: 1234567890" required><br><br>
+                    </div>
+                    
+                    <div class="form-floating mb-3">
+                        <label for="message">Message:</label><br><br>
+                        <input type="text" id="message" name="message" required><br><br>
+                    </div>
                     <!-- Campo para el correo electrónico -->
-                    <label for="message">Message:</label>
-                    <input type="text" id="message" name="message" required><br><br>
+                   
 
                       <!-- Botón para enviar el formulario -->
-                    <input type="submit" value="Send" formaction="{{ url_for('contacto.submit') }}">
+                      <div class="d-grid">
+                        <input type="submit" value="Send" formaction="{{ url_for('contacto.submit') }}">
+                      </div>
+                    
                   </form>
               </div>
           </div>
