--- a/app/templates/contacto/contacto.html
+++ b/app/templates/contacto/contacto.html
@@ -17,34 +17,29 @@
           <div class="row gx-5 justify-content-center">
               <div class="col-lg-8 col-xl-6">
 
-                <form method="POST">
+                <form id="contactForm" method="POST">
                     <!-- Campo para el nombre -->
                     <div class="form-floating mb-3">
-                        <label for="nombre">Name:</label><br><br>
-                        <input type="text" id="nombre" name="nombre" required><br><br>
-                    </div>
-
-                    <div class="form-floating mb-3">
-                        <label for="nombre">Name:</label><br><br>
+                        <label for="nombre">Name:</label>
                         <input type="text" id="nombre" name="nombre" required><br><br>
                     </div>
     
                     <!-- Campo para el correo electrónico -->
                     <div class="form-floating mb-3">
-                        <label for="correo">Correo Electrónico:</label><br><br>
+                        <label for="correo">Correo Electrónico:</label>
                         <input type="email" id="correo" name="correo" required><br><br>
                     </div>
                     
                     
                     <!-- Campo para el teléfono -->
                     <div class="form-floating mb-3">
-                        <label for="telefono">Phone number:</label><br><br>
+                        <label for="telefono">Phone number:</label>
                         <input type="tel" id="telefono" name="telefono" pattern="[0-9]{10}" placeholder="Ejemplo: 1234567890" required><br><br>
                     </div>
                     
                     <div class="form-floating mb-3">
-                        <label for="message">Message:</label><br><br>
-                        <input type="text" id="message" name="message" required><br><br>
+                        <label for="message">Message:</label>
+                        <textarea type="text" id="message" name="message" required><br><br>
                     </div>
                     <!-- Campo para el correo electrónico -->
                    
